add DockablePane and selectionChanged

--- a/RevitTestTask/RevitTestTask.csproj
+++ b/RevitTestTask/RevitTestTask.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
+    <Compile Include="Command.cs" />
     <Compile Include="MyControl.xaml.cs">
       <DependentUpon>MyControl.xaml</DependentUpon>
     </Compile>
